# handoffkit

./: .dockerignore  .env.example  .gitignore  .matter-context.json  .matter-context.schema.json  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENSEMBLE_PRODUCT_PLAN.md  HARNESS_PROMPT_PASSTHROUGH_SPEC.md  NOTICE  PRODUCTION_READINESS_AUDIT.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  fusionkit.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portless.json  pyproject.toml  trackcn.json  tsconfig.base.json  tsconfig.json  turbo.json
python/fusionkit-cli/: README.md  pyproject.toml
python/fusionkit-cli/src/fusionkit_cli/: __init__.py  hyperkit_plugin.py  main.py  onboarding.py
python/fusionkit-cli/tests/: test_cli_version.py  test_hyperkit_plugin.py  test_onboarding.py  test_runtime_split_packaging.py
python/fusionkit-core/: README.md  pyproject.toml
python/fusionkit-core/src/fusionkit_core/: __init__.py  artifacts.py  client_anthropic.py  client_codex.py  client_errors.py  client_fake.py  client_google.py  client_openai.py  client_types.py  client_wire.py  clients.py  config.py  context.py  contracts.py  credentials.py  fake_client.py  fusion.py  judge.py  kernel.py  metrics.py  model_client.py  panel.py  producers.py  prompts.py  providers.py  registry.py  routekit_client.py  router.py  run.py  run_models.py  run_store.py  trace.py  types.py
python/fusionkit-core/tests/: test_cloud_clients.py  test_context.py  test_core.py  test_core_units.py  test_docs_contracts.py  test_error_taxonomy.py  test_fusion_run.py  test_judge.py  test_model_reasoning.py  test_panel_mode.py  test_prompt_integrity.py  test_prompt_overrides.py  test_provenance.py  test_providers.py  test_registry_pricing.py  test_routekit_client.py  test_run_store.py  test_step_mode_native.py
python/fusionkit-evals/: README.md  pyproject.toml
python/fusionkit-evals/adapters/: aider_polyglot_adapter.py  lcb_select_adapter.py  livecodebench_adapter.py
python/fusionkit-evals/benchmarks/: README.md
python/fusionkit-evals/src/fusionkit_evals/: __init__.py  bench_history.py  bench_runtime.py  bench_stats.py  bench_verify.py  benchmark.py  benchmark_panel.py  candidate_bank.py  checkers.py  cli.py  cli_shared.py  code_extract.py  dirty_dozen.py  exec_select.py  fusion_bench.py  fusion_compound.py  fusion_hillclimb.py  fusion_reports.py  gateway_target.py  hyperkit_plugin.py  livecodebench_data.py  pareto.py  polyglot.py  prompt_tuning.py  provenance.py  public_bench.py  public_bench_report.py  public_smoke.py  registry.py  resources.py  sandbox.py  schema.py  scorers.py  tiny.py
python/fusionkit-evals/tests/: test_bench_reliability.py  test_dirty_dozen.py  test_evals.py  test_exec_select.py  test_fusion_bench.py  test_fusion_compound.py  test_fusion_hillclimb.py  test_hyperkit_plugin.py  test_prompt_tuning.py  test_public_bench.py  test_public_smoke.py
python/fusionkit-lab/: pyproject.toml
python/fusionkit-lab/registry/: 2026-q3.yaml
python/fusionkit-lab/src/fusionkit_lab/: __init__.py  cli.py  config.py  registry.py
python/fusionkit-lab/tests/: test_cli.py  test_config.py  test_registry.py
python/fusionkit-mlx/: README.md  pyproject.toml
python/fusionkit-mlx/src/fusionkit_mlx/: __init__.py  launcher.py
python/fusionkit-server/: README.md  pyproject.toml
python/fusionkit-server/src/fusionkit_server/: __init__.py  app.py  cursor_endpoint.py  openai_endpoint.py
python/fusionkit-server/tests/: test_adversarial.py  test_cursor_endpoint.py  test_fusion_extension.py  test_fusion_runs_api.py  test_request_fidelity.py  test_server.py  test_streaming.py  test_tool_call_reassembly.py  test_tool_resume.py  test_trajectory_step.py
python/fusionkit-testkit/: LICENSE  README.md  pyproject.toml
python/fusionkit-testkit/src/fusionkit_testkit/: __init__.py  behaviors.py  cli.py  endpoints.py  engine.py  matrix.py  pytest_plugin.py  scenarios.py  server.py  sse.py  wire_anthropic.py  wire_google.py  wire_openai.py  wire_responses.py
python/fusionkit-testkit/tests/: test_adversarial.py  test_behavior_contract.py  test_engine_depth.py  test_engine_e2e.py  test_engine_fuzz.py  test_engine_process.py  test_engine_runs_and_processes.py  test_engine_surfaces.py  test_matrix_engine_passthrough.py  test_matrix_wire_clients.py  test_simulator.py  test_simulator_google_codex.py  test_stream_chunk_fuzz.py
python/hyperkit/: README.md  pyproject.toml
python/hyperkit/registry/: 2026-q3.yaml
python/hyperkit/src/hyperkit/: __init__.py  cli.py  local_controller.py  replay.py  stats.py  telemetry.py
python/hyperkit/tests/: __init__.py  test_adapters.py  test_aws_backend.py  test_controller.py  test_dashboards.py  test_experiments.py  test_hyperkit_core.py  test_import_boundary.py  test_livecodebench_adapter.py  test_local_backend.py  test_orchestrator.py  test_registry.py  test_replay_acceptance.py  test_snapshots.py  test_stats.py  test_tailnet_observability.py
python/mlx-lm-structured/: README.md  pyproject.toml
python/mlx-lm-structured/fork/: 0001-Add-optional-structured-decoding-hooks-to-the-server.patch  README.md
python/mlx-lm-structured/tests/: conftest.py  test_compile.py  test_fork_server.py  test_integration.py  test_patching_mlx.py  test_processor.py  test_seams.py  test_spec.py  vocab_fixture.py
python/model-area-index/: README.md  pyproject.toml
python/model-area-index/fixtures/: model_area_scores.sample.jsonl
python/model-area-index/snapshots/: model_area_canvas.html  model_area_matrix.latest.json  public_model_area_scores.latest.jsonl
python/model-area-index/src/model_area_index/: cli.py  (+3 more)
python/uniroute/: README.md  pyproject.toml  requirements.txt
python/uniroute-mlx/: README.md  pyproject.toml
python/uniroute-mlx/tests/: fake_server.py  test_card.py  test_cli_end_to_end.py  test_client_and_evaluate.py
python/uniroute/tests/: test_end_to_end.py  test_evaluate.py  test_gradients.py  test_kmeans.py  test_learned_map.py  test_routers.py
spec/model-fusion-contract/python/: README.md  pyproject.toml
(+1502 files in other folders)
