[project]
name = "fusionkit"
version = "0.7.1"
description = "Command line interface for fusionkit: local response-level model fusion."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "fusionkit-core==0.7.1",
  "fusionkit-evals==0.7.1",
  "fusionkit-mlx==0.7.1",
  "fusionkit-server==0.7.1",
  "typer>=0.20.0",
]

[project.scripts]
fusionkit = "fusionkit_cli.main:app"

[tool.uv.build-backend]
module-name = "fusionkit_cli"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
