[project]
name = "fusionkit"
version = "0.9.0"
description = "Internal Python synthesis sidecar for the FusionKit Node CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Velum Labs" }]
keywords = [
  "fusionkit",
  "model-fusion",
  "llm",
  "ensemble",
  "sidecar",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "fusionkit-core==0.9.0",
  "fusionkit-server==0.9.0",
  "typer>=0.27.0",
  "uvicorn>=0.50.0",
]

[project.urls]
Homepage = "https://fusionkit.velum-labs.com"
Repository = "https://github.com/velum-labs/handoffkit"
Documentation = "https://fusionkit.velum-labs.com"

[project.scripts]
fusionkit-sidecar = "fusionkit_cli.main:app"

[tool.uv.build-backend]
module-name = "fusionkit_cli"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
