[project]
name = "fusionkit-core"
version = "0.7.1"
description = "Core local model fusion primitives."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=1.0.0",
  "openai>=2.13.0",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
