[project]
name = "fusionkit-evals"
version = "0.5.3"
description = "Evaluation and Pareto analysis tools for fusionkit."
requires-python = ">=3.11"
dependencies = [
  "fusionkit-core==0.5.3",
  "pydantic>=2.12.5",
]

[project.optional-dependencies]
evals = [
  "pandas>=2.3.3",
]
# Used only by the standalone LiveCodeBench runner adapter
# (adapters/livecodebench_adapter.py). Pinned <4 because the dataset uses a
# loading script, which datasets>=4 dropped.
livecodebench = [
  "datasets<4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
