[project]
name = "fusionkit-evals"
version = "0.8.0"
description = "Evaluation and Pareto analysis tools for fusionkit."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Velum Labs" }]
keywords = [
  "fusionkit",
  "model-fusion",
  "llm",
  "ensemble",
  "evaluation",
  "benchmarks",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "fusionkit-core==0.8.0",
  "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://fusionkit.velum-labs.com"
Repository = "https://github.com/velum-labs/handoffkit"
Documentation = "https://fusionkit.velum-labs.com"

[project.optional-dependencies]
evals = [
  "pandas>=2.3.3",
]
# Used only by the standalone LiveCodeBench runner adapter
# (adapters/livecodebench_adapter.py). Pinned <4 because the dataset uses a
# loading script, which datasets>=4 dropped.
livecodebench = [
  "datasets<4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
