[project]
name = "fusionkit-lab"
version = "0.1.0"
description = "FusionKit lab loop orchestration tools."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
]

[project.scripts]
fklab = "fusionkit_lab.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusionkit_lab"]
