[project]
name = "fusionkit-mlx"
version = "0.1.0"
description = "Optional MLX helper utilities for fusionkit."
requires-python = ">=3.11"
dependencies = [
  "fusionkit-core",
]

[project.optional-dependencies]
mlx = [
  "mlx-lm>=0.30.0; platform_system == 'Darwin'",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
