[project]
name = "fusionkit-mlx"
version = "0.8.0"
description = "Optional MLX helper utilities for fusionkit."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Velum Labs" }]
keywords = [
  "fusionkit",
  "model-fusion",
  "llm",
  "ensemble",
  "mlx",
  "local-model",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "fusionkit-core==0.8.0",
]

[project.urls]
Homepage = "https://fusionkit.velum-labs.com"
Repository = "https://github.com/velum-labs/handoffkit"
Documentation = "https://fusionkit.velum-labs.com"

[project.optional-dependencies]
mlx = [
  "mlx-lm>=0.30.0; platform_system == 'Darwin'",
]

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"
