[project]
name = "fusionkit-server"
version = "0.3.0"
description = "OpenAI-compatible HTTP server for fusionkit."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.4",
  "fusionkit-core==0.2.0",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.38.0"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
