[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[project]
name = "mlx-lm-structured"
version = "0.2.0"
description = "Constrained/structured decoding for the mlx-lm server (OpenAI response_format + vLLM-style guided_* params), built on outlines-core; enforced by the velum-labs/mlx-lm fork when installed alongside it"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
dependencies = ["outlines-core==0.2.14"]

[dependency-groups]
# numpy+numba drive the outlines-core numpy kernels used by the test suite so
# the package tests run on hosts without Apple Silicon / mlx.
dev = ["pytest>=8", "numpy>=1.26", "numba>=0.60"]

[tool.pytest.ini_options]
testpaths = ["tests"]
