[project]
name = "model-area-index"
version = "0.1.0"
description = "No-run public model capability index and model-by-area matrix builder."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.12.5",
]

[project.scripts]
model-area-index = "model_area_index.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
