[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uniroute"
version = "0.1.0"
description = "UniRoute: universal model routing for efficient LLM inference (arXiv:2502.08773)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
