[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[project]
name = "uniroute"
version = "0.1.0"
description = "UniRoute: universal model routing for efficient LLM inference (arXiv:2502.08773)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
dependencies = ["numpy>=1.26"]

[project.scripts]
uniroute-demo = "uniroute.demo:main"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
