[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "velum-model-fusion-protocol"
version = "0.3.0"
description = "Model fusion JSON Schema records and OpenAPI 3.1 HTTP contracts."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  "jsonschema>=4.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velum_model_fusion_protocol"]

[tool.velum.protocol.assets]
include = ["schema", "openapi", "protocol-package.json"]
